[tool.poetry]
name = "super"
version = "0.1.0"
description = ""
authors = ["yanochkina_sl <yanochkinasvetlana@mail.ru>"]
readme = "README.md"
packages = [
	{include = "super"}
]

[tool.poetry.scripts]
do_something = 'qwe:hello'

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
